--- a/README
+++ b/README
@@ -1,1 +1,24 @@
+# data-collection-and-web-scraping-challenge
 
+Mars Attacks! 
+
+### Tools Used
+* Splinter
+* Beautiful Soup
+* Python
+* Pandas
+
+## Part 1 - Use Automated Browsing to Scrape Titles and Preview Text
+
+The code for Part 1 is in the jupyter notebook titled part_1_mars_news.ipynb.
+
+1. I levereaged Splinter to to start an automated browsing session on the Mars news website. I inspected the page to identify relevant elements.
+2. I created a Beautiful Soup object (called mars-soup, *chef's kiss*), to extract text elements from the site.
+3. I created a Python list to contain dictionaries of the scraping results. Each dictionary has two keys: "title" and "preview." The list is printed in the notebook.
+
+## Part 2 - Use Automated Browsing to Scrape Mars Weather Data from a Table
+
+The code for Part 2 is in the jupyter notebook titled part_2_mars_weather.
+
+1. I levereaged Splinter to to start an automated browsing session on the Mars temperature website. I inspected the page to identify table elements.
+2. 
